[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attention_optimizer"
version = "1.0.0"
description = "A production-grade OpenEnv for human attention optimization"
authors = [
    { name = "Senior Systems Architect" }
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "fastapi",
    "uvicorn",
    "huggingface_hub",
    "pyyaml"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "models*", "tasks*"]