[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "human_attention_env"
version = "0.1.0"
description = "A production-grade OpenEnv for human attention optimization"
authors = [{ name = "Senior Systems Architect" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "openai",
    "pyyaml",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "models*", "tasks*", "server*"]